Fixed z-index header menu after adding carousel

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,8 @@ header .nav-bar button{
 }
 
 header .nav-bar-bottom{
+    position: relative;
+    z-index: 4;
     padding: 10px 0;
     display: flex;
     align-items: center;
